use correct logos in dark mode

--- a/src/components/layout/footer/footer.module.scss
+++ b/src/components/layout/footer/footer.module.scss
@@ -34,9 +34,9 @@ $spacing: 10px;
   &.dark {
     background-color: #222;
     // border: none;
-    a {
-      display: none;
-    }
+    // a {
+    //   display: none;
+    // }
   }
 
   a:first-child:not(:last-child) img {
